Made visual changes, the Rock will be a responsive image. Next up is the Scissors and Paper images.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper & Scissors</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <div id="rockcontainer">
+        <div class="rockbody"></div>
+        <div class="eyes"></div>
+        <div class="iris"></div>
+        <div class="moss"></div>
+        <div class="moss moss2"></div>
+        <div class="littlestone1"></div>
+        <div class="littlestone2"></div>
+   </div>
+   <div id="scissorcontainer">
+        <div class="blade1"></div>
+        <div class="blade2"></div>
+        <div class="handle1"></div>
+        <div class="handle2"></div>
+   </div>
 </body>
 </html>
