Finished the scissor image and container hover

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div class="blade2"></div>
         <div class="handle1"></div>
         <div class="handle2"></div>
+        <div class="handle-bottom1"></div>
+        <div class="handle-bottom2"></div>
    </div>
 </body>
 </html>
