--- a/index.html
+++ b/index.html
@@ -9,22 +9,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div id="rockcontainer">
-        <div class="rockbody"></div>
-        <div class="eyes"></div>
-        <div class="iris"></div>
-        <div class="moss"></div>
-        <div class="moss moss2"></div>
-        <div class="littlestone1"></div>
-        <div class="littlestone2"></div>
-   </div>
-   <div id="scissorcontainer">
-        <div class="blade1"></div>
-        <div class="blade2"></div>
-        <div class="handle1"></div>
-        <div class="handle2"></div>
-        <div class="handle-bottom1"></div>
-        <div class="handle-bottom2"></div>
-   </div>
+     <div id="maincontainer">
+          <div id="rockcontainer">
+               <div class="rockbody"></div>
+               <div class="eyes"></div>
+               <div class="iris"></div>
+               <div class="moss"></div>
+               <div class="moss moss2"></div>
+               <div class="littlestone1"></div>
+               <div class="littlestone2"></div>
+          </div>
+          <div id="scissorcontainer">
+               <div class="blade1"></div>
+               <div class="blade2"></div>
+               <div class="handle1"></div>
+               <div class="handle2"></div>
+               <div class="handle-bottom1"></div>
+               <div class="handle-bottom2"></div>
+          </div>
+          <div id="papercontainer">
+               <img style='height: 100%; width: 100%; object-fit: contain' src="paper.png">
+          </div>
+     </div>
 </body>
 </html>
