Changed the divs into buttons. Added Eventlisteners to the buttons in order to make the Playround function work. Game is being played in alert. Will change it soon

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper & Scissors</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <div id="maincontainer">
-          <div id="rockcontainer">
+          <button id="rockcontainer">
                <div class="rockbody"></div>
                <div class="eyes"></div>
                <div class="iris"></div>
@@ -18,18 +17,19 @@
                <div class="moss moss2"></div>
                <div class="littlestone1"></div>
                <div class="littlestone2"></div>
-          </div>
-          <div id="scissorcontainer">
+          </button>
+          <button id="scissorcontainer">
                <div class="blade1"></div>
                <div class="blade2"></div>
                <div class="handle1"></div>
                <div class="handle2"></div>
                <div class="handle-bottom1"></div>
                <div class="handle-bottom2"></div>
-          </div>
-          <div id="papercontainer">
+          </button>
+          <button id="papercontainer">
                <img style='height: 100%; width: 100%; object-fit: contain' src="paper.png">
-          </div>
+          </button>
      </div>
 </body>
+<script src="script.js"></script>
 </html>
