--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
                <div class="handle2"></div>
                <div class="handle-bottom1"></div>
                <div class="handle-bottom2"></div>
+               <div class="eye1">
+                    <div class="circle circle1"></div>
+                    <div class="circle circle2"></div>
+               </div>
+               <div class="mouthouter"></div>
+               <div class="mouthinner"></div>
+               <div class="eye2">
+                    <div class="circle circle3"></div>
+                    <div class="circle circle4"></div>
+               </div>
           </button>
           <button id="papercontainer">
                <img style='height: 100%; width: 100%; object-fit: contain' src="paper.png">
