Major changes, the score is now displayed and will reset after 5 points

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <div id="scorecontainer">
+          <h1 class="announcement"></h1>
+          <p class="computerscoreboard">Computer:</p>
+          <p class="playerscoreboard">Player:</p>
+     </div>
      <div id="maincontainer">
           <button id="rockcontainer">
                <div class="rockbody"></div>
