added text to the html announcement

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
      <div id="scorecontainer">
-          <h1 class="announcement"></h1>
-          <p class="computerscoreboard">Computer:</p>
-          <p class="playerscoreboard">Player:</p>
+          <h1 class="announcement">Play a game of Rock Paper Scissors to 5!</h1>
+          <p class="computerscoreboard">Computer: 0</p>
+          <p class="playerscoreboard">Player: 0</p>
      </div>
      <div id="maincontainer">
           <button id="rockcontainer">
